<resources>
    <string name="app_name">DateMe</string>

    <string name="dashboard">Dashboard</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="trouble_logging_in">Trouble logging in?</string>
    <string name="log_in_with_phone_number">Log In With Phone Number</string>
    <string name="log_in_with_google">Log In With Google</string>
    <string name="log_in_with_facebook">Log In With Facebook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_number_is">My number is</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="login_continue">Continue</string>
    <string name="account_recovery_subtitle">Changed your Phone Number, or lost access to your Facebook Account? We can help you login with your email.</string>
    <string name="login_with_email">Login with email</string>
    <string name="login_by_email">Login by email</string>
    <string name="your_email_is">Your email is</string>
    <string name="email_login_link">We\'ll email you a link that will instantly log you in.</string>
    <string name="send_email">Send Email</string>
    <string name="username">Username</string>
    <string name="card_user_image">Card User Image</string>
    <string name="notification_item_text">Someone liked your profile</string>
    <string name="notification_time_text">2h ago</string>
    <string name="notification_user_image">Notification User Image</string>
    <string name="notification_filter_button">Notification Filter Button</string>
    <string name="user_profile">User Profile</string>
    <string name="user_name_age">Name, Age</string>
    <string name="user_location">User Location</string>
    <string name="email_verified">Email Verified</string>
    <string name="phone_number_verified">Phone Number Verified</string>
    <string name="google_verified">Google Verified</string>
    <string name="facebook_verified">Facebook Verified</string>
</resources>