<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_user_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="?android:attr/actionBarSize"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="0dp"
            android:text="@string/user_profile"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_user_profile_activity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_user_image"
                style="@style/circular"
                android:layout_width="200dp"
                android:layout_height="230dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_circular_button"
                android:src="@drawable/ic_profile" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_user_name_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_user_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:maxLines="1"
                android:text="@string/user_name_age"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_user_name_age"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/montserrat_bold"
                android:maxLines="1"
                android:text="@string/user_location"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linear_social_verified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_user_location"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/facebook_verified"
                    android:src="@drawable/ic_facebook_verified" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/google_verified"
                    android:src="@drawable/ic_google_verified" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/phone_number_verified"
                    android:src="@drawable/ic_phone_login" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/email_verified"
                    android:src="@drawable/ic_email_verified" />

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>