<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:paddingLeft="5dp"
    android:paddingTop="2dp"
    android:paddingRight="5dp"
    android:paddingBottom="2dp">

    <ImageView
        android:id="@+id/notification_user_image"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/notification_user_image"
        android:src="@drawable/ic_profile" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notification_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:maxLines="2"
            android:text="@string/notification_item_text"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notification_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/notification_time_text"
            android:textSize="13sp" />

    </LinearLayout>


</LinearLayout>